--- a/source/index.html
+++ b/source/index.html
@@ -20,7 +20,7 @@
           Интернет-магазин кофейных напитков
         </span>
       </div>
-      <nav class="navigation navigation--closed">
+      <nav class="navigation navigation--closed navigation--nojs">
         <ul class="navigation__list nav-list">
           <li class="nav-list__item">
             <a class="nav-list__link nav-list__link--current" href="index.html">Главная</a>
@@ -43,6 +43,9 @@
               </svg>
               <span class="user-list__description">
                 Войти
+              </span>
+              <span class="visually-hidden">
+                Войти в аккаунт.
               </span>
             </a>
           </li>
