--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <title>Drink2Go</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.7.1/nouislider.min.css" integrity="sha512-qveKnGrvOChbSzAdtSs8p69eoLegyh+1hwOMbmpCViIwj7rn4oJjdmMvWOuyQlTOZgTlZA0N2PXA7iA8/2TUYA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
+    <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body class="page__body">
     <header class="header">
@@ -71,7 +76,7 @@
       <h1 class="visually-hidden">
         Drink2Go - интернет-магазин кофейных напитков
       </h1>
-      <section class="slider">
+      <section class="swiper slider">
         <ul class="slider__list">
           <li class="slider__item slider__item--flat-white slider__item--current">
             <span class="slider__text-badge">
@@ -319,7 +324,7 @@
                   Цена
                 </legend>
                 <div class="form__range">
-                  <div class="form__range-bar" style="left: 0; width: 240px;">
+                  <div class="form__range-bar">
                     <button class="form__range-toggle form__range-toggle--min" type="button">
                       <span class="visually-hidden">
                         Уменьшить цену
@@ -333,8 +338,8 @@
                   </div>
                 </div>
                 <div class="form__input-wrapper">
-                  <input class="form__input form__input--number" type="number" name="min-price" min="0" max="100" step="1" placeholder="0" required>
-                  <input class="form__input form__input--number" type="number" name="max-price" min="0" max="100" step="1" placeholder="130" required>
+                  <input class="form__input form__input--number form__input--min" type="number" name="min-price" min="0" max="100" step="1" placeholder="0" required>
+                  <input class="form__input form__input--number form__input--max" type="number" name="max-price" min="0" max="100" step="1" placeholder="130" required>
                 </div>
               </fieldset>
               <fieldset class="form__fieldset form__fieldset--inputs-radio">
@@ -343,7 +348,7 @@
                 </legend>
                 <div class="form__fieldset-inner-wrapper">
                   <label class="form__label">
-                    <input class="form__input form__input--radio" type="radio" name="is-milk" value="any">
+                    <input class="form__input form__input--radio" type="radio" name="is-milk" value="any" checked>
                     <span class="form__input-description">
                       Неважно
                     </span>
@@ -374,7 +379,7 @@
                 </legend>
                 <div class="form__fieldset-inner-wrapper">
                   <label class="form__label">
-                    <input class="form__input form__input--checkbox" type="checkbox" name="country" value="brazil">
+                    <input class="form__input form__input--checkbox" type="checkbox" name="country" value="brazil" checked>
                     <span class="form__input-description">
                       Бразилия
                     </span>
@@ -426,6 +431,9 @@
               </option>
               <option value="expensive">
                 сначала дорогие
+              </option>
+              <option value="hight-score">
+                высокий рейтинг
               </option>
             </select>
           </label>
@@ -581,7 +589,7 @@
             </a>
           </li>
           <li class="catalog__pagination-item catalog__pagination-item--current">
-            <span class="catalog__pagination-link" href="#">
+            <span class="catalog__pagination-link">
               2
             </span>
           </li>
@@ -602,7 +610,143 @@
           </li>
         </ol>
       </section>
+      <section class="map">
+        <h2 class="visually-hidden">
+          Наше расположение на карте.
+        </h2>
+        <div id="map" class="map__wrapper"></div>
+      </section>
+      <footer class="footer">
+        <div class="footer__inner-wrapper footer__inner-wrapper--logo-and-social">
+          <div class="footer__logo-wrapper">
+            <a class="footer__logo logo" href="index.html">
+              <picture>
+                <source media="(min-width: 768px)" srcset="img/icons/stack.svg#logo-desktop" width="170" height="36">
+                <img class="logo__icon" src="img/icons/stack.svg#logo-tablet" width="82" height="36" alt="Логотип Drink2Go.">
+              </picture>
+            </a>
+            <span class="footer__logo-description">
+              Интернет-магазин кофейных напитков
+            </span>
+          </div>
+          <ul class="footer__social social">
+            <li class="social__item">
+              <a class="social__link social__link--vk" href="#">
+                <svg class="social__icon" width="20" height="20" fill="defaultColor" role="img">
+                  <use href="img/icons/stack.svg#logo-vk"></use>
+                </svg>
+                <span class="visually-hidden">В контакте.</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--pintesert" href="#">
+                <svg class="social__icon" width="22" height="22" fill="defaultColor" role="img">
+                  <use href="img/icons/stack.svg#logo-pinterest"></use>
+                </svg>
+                <span class="visually-hidden">Пинтерест.</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--ok" href="#">
+                <svg class="social__icon" width="20" height="20" fill="defaultColor" role="img">
+                  <use href="img/icons/stack.svg#logo-ok"></use>
+                </svg>
+                <span class="visually-hidden">Одноклассники.</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__inner-wrapper">
+          <h2 class="footer__title">
+            Интернет-магазин
+          </h2>
+          <nav class="footer__navigation">
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a class="footer__link" href="#">
+                  Каталог
+                </a>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link" href="#">
+                  Доставка
+                </a>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link" href="#">
+                  Способы оплаты
+                </a>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link" href="#">
+                  О нас
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="footer__inner-wrapper">
+          <h2 class="footer__title">
+            Медиа
+          </h2>
+          <nav class="footer__navigation">
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a class="footer__link" href="#">
+                  Блог
+                </a>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link" href="#">
+                  Информация для СМИ
+                </a>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link" href="#">
+                  Правовая информация
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="footer__inner-wrapper footer__inner-wrapper--contacts">
+          <h2 class="footer__title">
+            Контакты
+          </h2>
+          <ul class="footer__list footer__list--contacts">
+            <li class="footer__item">
+              <a class="footer__link" href="#">
+                <svg class="footer__icon" width="13" height="16" fill="defaultColor" role="img">
+                  <use href="img/icons/stack.svg#icon-adress"></use>
+                </svg>
+                <address class="footer__address">
+                  Санкт-Петербург, набережная реки Карповки, дом 5
+                </address>
+              </a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="tel:79999999999">
+                <svg class="footer__icon" width="13" height="16" fill="defaultColor" role="img">
+                  <use href="img/icons/stack.svg#icon-phone"></use>
+                </svg>
+                +7 (999) 999-99-99
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__inner-wrapper footer__inner-wrapper--copyright">
+          <span class="footer__copyright-text">
+            Разработано в
+            <a class="footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
+              HTML Academy
+              <svg class="footer__copyright-icon" width="12" height="16" fill="defaultColor" role="img">
+                <use href="img/icons/stack.svg#copyright"></use>
+              </svg>
+            </a>
+          </span>
+        </div>
+      </footer>
+      <script src="./js/main.js" type="module"></script>
     </main>
-    <script src="./js/script.js" defer></script>
   </body>
 </html>
