--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <li class="user-list__item">
             <a class="user-list__link" href="#">
               <svg class="user-list-icon" width="16" height="16">
-                <use href="/img/icons/stack.svg#user"></use>
+                <use href="../img/icons/stack.svg#user"></use>
               </svg>
               <span class="user-list__description">
                 Войти
@@ -57,7 +57,7 @@
           <li class="user-list__item">
             <a class="user-list__link" href="#">
               <svg class="user-list-icon" width="16" height="16" role="img">
-                <use href="/img/icons/stack.svg#basket"></use>
+                <use href="../img/icons/stack.svg#basket"></use>
               </svg>
               <span class="user-list__description">
                 Корзина
